fix:change css and js link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XenJs Demo</title>
-    <link rel="stylesheet" href="/css/min.css">
+    <link rel="stylesheet" href="css/min.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             }
         ]
     </script>
-    <script type="module" src="/js/xen.js"></script>
+    <script type="module" src="js/xen.js"></script>
 </body>
 
 </html>
